demo/calico/calico-network-policy.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: network-policy
  labels:
    name: network-policy

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: network-policy
  name: network-policy
spec:
  podSelector:
    matchLabels:
      name: network-policy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pod: name1
    - ports:
        - protocol: TCP
          port: 80
