demo/calico/s.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
  nodeSelector:
    node: k8s-node2-label

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginxclient
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: nginxclient
      ports:
        - port: 80
          protocol: TCP

# client1
---
apiVersion: v1
kind: Pod
metadata:
  name: client1
  labels:
    role: nginxclient
spec:
  containers:
    - name: client1
      image: busybox
      command: ["sleep","3600"]
  nodeSelector:
    node: k8s-node1-label


# client2
---
apiVersion: v1
kind: Pod
metadata:
  name: client2
spec:
  containers:
    - name: client2
      image: busybox
      command: ["sleep","3600"]
  nodeSelector:
    node: k8s-node2-label
